# calculAR-propiedad

./: .env.txt  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  dvc.yaml  load_save_db.ipynb  load_save_db.py  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: exception_handlers.py
app/data/DB/: experimento.duckdb
app/data/metrics/: metrics.json  params.yaml
app/data/metrics/plots/metrics/: gb_mae.tsv  gb_r2.tsv  gb_rmse.tsv  rf_mae.tsv  rf_r2.tsv  rf_rmse.tsv
app/models/: schemas.py
app/processing/: ingestor.py  trainer.py
app/routers/: health.py  ingestion.py  pipeline.py  predict.py  training.py
app/utils/: config.py  latency.py  log_config.py  model_loader.py
conf.d/: custom_logs.yaml
img/: logs en datadog.webm
