[project]
name = "calcular-propiedad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.120.4",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
]
