[project]
name = "calcular-propiedad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14" #ultimo release antes de 3.14, duckdb sino tiene problemas
dependencies = [
    "duckdb>=1.4.1",
    "fastapi>=0.120.4",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "kagglehub[pandas-datasets]>=0.3.13",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
    "commitizen>=4.9.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
]

[tool.commitizen]
name = "cz_customize"
tag_format = "v$version"

[tool.commitizen.customize]
message_template = "{% if change_type %}{{ change_type }}{% endif %}{% if scope %}({{ scope }}){% endif %}: {{ message }}{% if body %}\n\n{{ body }}{% endif %}{% if footer %}\n\n{{ footer }}{% endif %}"
example = "feat(core): add new feature\n\nDescription...\n\nfixes #123"
schema = "<type>(<scope>): <subject>"
schema_pattern = "^(feat|fix|chore|docs|refactor|perf|test)(\\(.*\\))?:\\s.*"

# Definimos las preguntas del flujo interactivo (incluimos footer)
[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "Seleccioná el tipo de cambio"
choices = [
  {value = "feat", name = "feat: nueva funcionalidad"},
  {value = "fix",  name = "fix: corrección de bug"},
  {value = "chore", name = "chore: tareas de mantenimiento"},
  {value = "docs", name = "docs: documentación"},
  {value = "refactor", name = "refactor: refactorización"},
  {value = "perf", name = "perf: mejora de rendimiento"},
  {value = "test", name = "test: agregar/ajustar tests"}
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "scope"
message = "¿En qué parte del código afecta este cambio? Scope (opcional)"

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Resumen corto (subject) del cambio"

[[tool.commitizen.customize.questions]]
type = "input"
name = "body"
message = "Descripción detallada (opcional)"
multiline = true

[[tool.commitizen.customize.questions]]
type = "input"
name = "footer"
message = "Footer (para cerrar issues automáticamente. ej: fixes #123, closes #456 y closes #457)"
